--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,29 @@
-,
+<!doctype html>
+<html>
+    <head>
+      <title> My personal introduction </title>
+        <style>
+     body {
+     background-color: #1b2227; }
+
+     h1 {
+     color: #59C4E7;}
+
+     p {
+     color: #688EEE; }
+
+         </style>
+
+     </head>
+    <body>
+        <h1>My name is Devin Rosario </h1>
+            <p> 
+                Hello im a cybersecurity student at wake tech community college.
+                 some of my interests include video games, food, and movies (especally horror). 
+                 Technology is a passion of mine and im excited to work ina  world full of it.
+            </p>
+
+
+    </body>
+   
+</html>
